--- a/new-request.html
+++ b/new-request.html
@@ -83,18 +83,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="row">
                 <div class="col-12">
-                    <div class="form-link-container" style="position: relative; width: 100%; min-height: 400px; border: 1px solid #ddd; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 40px;">
-                        <div style="max-width: 600px;">
-                            <h2 style="color: #333; margin-bottom: 20px; font-family: Inter, sans-serif;">Service Request Form</h2>
-                            <p style="color: #666; margin-bottom: 30px; font-size: 16px; line-height: 1.6;">Click the button below to access our secure service request form. You'll be redirected to our partner portal where you can submit detailed information about your electrical service needs.</p>
-                            <a href="https://leonard.pineapplecare.net" target="_blank" class="btn btn-primary btn-lg" style="padding: 15px 30px; font-size: 18px; text-decoration: none; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: all 0.3s ease;">
-                                Open Service Request Form
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16" style="margin-left: 8px;">
-                                    <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/>
-                                </svg>
-                            </a>
-                            <p style="color: #888; margin-top: 20px; font-size: 14px;">This will open in a new tab for your security and convenience.</p>
-                        </div>
+                    <div class="iframe-container" style="position: relative; width: 100%; height: 800px; border: 1px solid #ddd; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+                        <iframe 
+                            src="https://leonard.pineapplecare.net" 
+                            style="width: 100%; height: 100%; border: none;"
+                            title="Leonard Electric Service Request Form"
+                            allowfullscreen>
+                            <p>Your browser does not support iframes. Please visit <a href="https://leonard.pineapplecare.net" target="_blank">leonard.pineapplecare.net</a> directly to submit your request.</p>
+                        </iframe>
                     </div>
                 </div>
             </div>
