Fixed embedded form appearance.

--- a/new-request.html
+++ b/new-request.html
@@ -73,13 +73,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </nav>
 
     <!-- Main Content Section with iframe -->
-    <section style="padding: 20px; min-height: 80vh; font-family: Inter, sans-serif;">
-            <div class="row">
-                <div class="col-12">
-                    <div class="iframe-container" style="position: relative; width: 100%; height: 800px; border: 1px solid #ddd; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+    <section style="padding: 0; font-family: Inter, sans-serif;">
+        <div class="container-fluid" style="padding: 0; margin: 0; max-width: 100%;">
+            <div class="row" style="margin: 0;">
+                <div class="col-12" style="padding: 0;">
+                    <div class="iframe-container" style="position: relative; width: 100%; height: 100vh; border: none; border-radius: 0; overflow: hidden; box-shadow: none;">
                         <iframe 
                             src="https://leonard.pineapplecare.net" 
-                            style="width: 100%; height: 100%; border: none;"
+                            style="width: 100%; height: 100%; border: none; display: block;"
                             title="Leonard Electric Service Request Form"
                             allowfullscreen>
                             <p>Your browser does not support iframes. Please visit <a href="https://leonard.pineapplecare.net" target="_blank">leonard.pineapplecare.net</a> directly to submit your request.</p>
