More changes to redirect contact us tto new form.

--- a/Lighting.html
+++ b/Lighting.html
@@ -67,7 +67,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link active" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
         </div>
@@ -220,7 +220,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
             <h3 class="fs-6 fw-bold">Contact Us</h3>
             <ul class="list-unstyled">
-                <li><a href="contacts.html" class="text-white">Book an Estimate</a></li>
             </ul>
             <div class="d-flex align-items-center mb-2">
                 <div class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telephone">
