--- a/electricalrepairs.html
+++ b/electricalrepairs.html
@@ -66,7 +66,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
         </div>
@@ -115,7 +115,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="text-center mt-5">
     <h2 style="font-size: 32px; margin-bottom: 20px;">Need Immediate Electrical Repairs?</h2>
     <p>Contact our licensed electricians for fast and reliable service today!</p>
-    <a href="contacts.html" class="btn btn-primary btn-lg">Book an Estimate Now</a>
     <p style="margin-top: 10px;">Or call us at <a href="tel:+16133283185">613-328-3185</a></p>
 </div>
     </div>
@@ -151,7 +150,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                 <h3 class="fs-6 fw-bold">Contact Us</h3>
                 <ul class="list-unstyled">
-                    <li><a href="contacts.html">Book an Estimate</a></li>
                     <li></li>
                 </ul>
                 <div class="d-flex align-items-center mb-2">
