--- a/homeautomation.html
+++ b/homeautomation.html
@@ -42,7 +42,7 @@
                     <li class="nav-item"><a class="nav-link active" href="homeautomation.html">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link" href="hottubs.html">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">Contact</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -96,7 +96,7 @@
     <div class="text-center mt-5">
         <h2 style="font-size: 32px; margin-bottom: 20px;">Ready to Simplify Your Life?</h2>
         <p>Contact us today to explore how home automation can transform your space.</p>
-        <a href="contacts.html" class="btn btn-primary btn-lg">Get Started Today</a>
+        <a href="new-request.html" class="btn btn-primary btn-lg">Get Started Today</a>
     </div>
 </div>
 
@@ -229,7 +229,7 @@
     <div class="text-center py-5 bg-light rounded" style="background-color: #ffffff; color: #000000;">
         <h2 class="fw-bold">Start Your Smart Home Journey Today</h2>
         <p> Get in touch with us to customize your smart home system.</p>
-        <a href="contacts.html" class="btn btn-primary btn-lg">Contact Us</a>
+                                <a href="new-request.html" class="btn btn-primary btn-lg">Contact Us</a>
     </div>
                         </div>
                     </div>
@@ -262,7 +262,6 @@
             <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column" style="margin-top: 6px;">
                 <h3 class="fs-6 fw-bold" style="margin-top: 7px;">Contact Us</h3>
                 <ul class="list-unstyled">
-                    <li><a href="contacts.html">Book an Estimate</a></li>
                     <li></li>
                 </ul>
                 <div class="d-flex align-items-center mb-2">
