--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -72,7 +72,7 @@
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link" href="hottubs.html">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">Contact</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -83,7 +83,7 @@
         <div class="container overlay">
             <h1 class="display-4">Ensure Your Home's Electrical Safety</h1>
             <p class="lead">Professional Electrical Inspection & Panel Labelling – only $499</p>
-            <a href="contacts.html" class="btn btn-primary btn-lg">Schedule Your Electrical Inspection</a>
+            <a href="new-request.html" class="btn btn-primary btn-lg">Schedule Your Electrical Inspection</a>
         </div>
     </header>
 
@@ -115,7 +115,7 @@
         <div class="container overlay">
             <h3 class="fw-bold">Ready to Protect Your Home?</h3>
             <p>Limited slots available. Don’t wait to secure your home.</p>
-            <a href="contacts.html" class="btn btn-light btn-lg">Book Now for $499 </a>
+                            <a href="new-request.html" class="btn btn-light btn-lg">Book Now for $499 </a>
         </div>
     </section>
 
@@ -151,7 +151,6 @@
         <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
             <h3 class="fs-6 fw-bold">Contact Us</h3>
             <ul class="list-unstyled">
-                <li><a href="contacts.html" class="text-white">Book an Estimate</a></li>
             </ul>
             <div class="d-flex align-items-center mb-2">
                 <div class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telephone">
