--- a/ev.html
+++ b/ev.html
@@ -66,7 +66,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link active" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
         </div>
@@ -225,7 +225,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                 <h3 class="fs-6 fw-bold">Contact Us</h3>
                 <ul class="list-unstyled">
-                    <li><a href="contacts.html">Book an Estimate</a></li>
                     <li></li>
                 </ul>
                 <div class="d-flex align-items-center mb-2">
