--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
         </div>
@@ -274,7 +274,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <div class="text-white p-4 p-md-5">
                                         <h2 class="fw-bold text-white mb-3">We can take care of 100% of your electrical needs.</h2>
                                         <p class="mb-4">With over 15 years of experience, from a small repair to a large custom installation, we've done it all!</p>
-                                        <div class="my-3"><a href="contacts.html"><a class="btn btn-primary btn-lg me-2" role="button" href="#">Learn More</a></a></div>
+                                        <div class="my-3"><a href="new-request.html"><a class="btn btn-primary btn-lg me-2" role="button" href="#">Learn More</a></a></div>
                                     </div>
                                 </div>
                                 <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img class="w-100 h-100 fit-cover" src="assets/img/servicesimage.png" style="width: 668px;height: 533.797px;margin-top: -1px;padding-top: 0px;padding-left: 24px;"></div>
@@ -313,7 +313,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                 <h3 class="fs-6 fw-bold">Contact Us</h3>
                 <ul class="list-unstyled">
-                    <li><a href="contacts.html">Book an Estimate</a></li>
                     <li></li>
                 </ul>
                 <div class="d-flex align-items-center mb-2">
