--- a/index.html
+++ b/index.html
@@ -469,27 +469,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto" style="font-family: Inter, sans-serif;">
-                    <h3 class="fw-bold" style="font-family: Inter, sans-serif;font-size: 45px;">Contact</h3>
+                    <h3 class="fw-bold" style="font-family: Inter, sans-serif;font-size: 45px;">Get in Touch</h3>
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
-                <div class="col-md-6 col-xl-4">
-                    <div></div><img src="assets/img/2.png" width="406" height="402">
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div>
-                        <form class="p-3 p-xl-4" style="color: var(--bs-body-bg);font-family: Inter, sans-serif;" data-bss-recipient="b71f6b0ca7543e9b144ab3f4251b9e67">
-                            <div class="mb-3"><label class="form-label" style="color: var(--bs-body-color);">Name</label><input class="form-control form-control-lg d-inline" type="text" id="name-2" name="Name" placeholder="Name" required="" style="color: var(--bs-emphasis-color);margin-top: -1px;padding-bottom: 6px;margin-bottom: 0px;"></div>
-                            <div class="mb-3"><label class="form-label" style="color: var(--bs-body-color);">Email</label><input class="form-control" type="email" id="email-3" name="Email" placeholder="Email" required=""></div>
-                            <div class="mb-3"><label class="form-label" style="color: var(--bs-body-color);">Phone Number</label><input class="form-control" type="text" id="phone-2" name="Phone number" placeholder="Phone Number" required=""></div>
-                            <div class="mb-3"></div><label class="form-label" style="color: var(--bs-body-color);">Message</label>
-                            <div class="mb-3"><textarea class="form-control" id="message-2" name="message" rows="6" placeholder="Message" required=""></textarea></div>
-                            <div><button class="btn btn-primary shadow d-block w-100" type="submit" style="font-family: Inter, sans-serif;">Send </button></div>
-                        </form>
+                <div class="col-md-6">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <img src="assets/img/2.png" width="406" height="402">
                     </div>
                 </div>
-                <div class="col-md-4 col-xl-4 d-flex justify-content-center justify-content-xl-start" style="font-family: Inter, sans-serif;">
-                    <div class="d-flex flex-wrap flex-md-column justify-content-md-start align-items-md-start h-100">
+                <div class="col-md-6 d-flex flex-column justify-content-center" style="font-family: Inter, sans-serif;">
+                    <div class="text-center mb-4">
+                        <a href="new-request.html" class="btn btn-primary btn-lg shadow" style="font-family: Inter, sans-serif; padding: 15px 30px; font-size: 18px;">New Request</a>
+                    </div>
+                    <div class="d-flex flex-column">
                         <div class="d-flex align-items-center p-3">
                             <div class="bs-icon-md bs-icon-circle bs-icon-primary shadow d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block bs-icon bs-icon-md"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telephone">
                                     <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"></path>
