Moved new request to old contacts page.

--- a/Lighting.html
+++ b/Lighting.html
@@ -67,7 +67,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link active" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">&nbsp;Contact&nbsp;</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
         </div>
