--- a/hottubs.html
+++ b/hottubs.html
@@ -67,7 +67,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link active" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">&nbsp;Contact&nbsp;</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
         </div>
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
                                         </svg></span><span>Ensured Safety and Compliance Standards.</span></li>
                             </ul>
-                        </div><a href="new-request.html"><a class="btn btn-primary d-block w-100" role="button" href="#">Get Started</a></a>
+                        </div><a href="contacts.html"><a class="btn btn-primary d-block w-100" role="button" href="#">Get Started</a></a>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <li class="d-flex mb-2"></li>
                                 <li class="d-flex mb-2" style="padding-bottom: 0px;margin-bottom: 14px;margin-top: 0px;"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 14px;">Efficient and Timely Service.</span></li>
                             </ul>
-                        </div><a href="new-request.html"><a class="btn btn-primary d-block w-100 bg-white-300" role="button" href="new-request.html">Learn More</a></a>
+                        </div><a href="contacts.html"><a class="btn btn-primary d-block w-100 bg-white-300" role="button" href="contacts.html">Learn More</a></a>
                     </div>
                 </div>
             </div>
