--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">&nbsp;Contact&nbsp;</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
         </div>
@@ -480,7 +480,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <div class="col-md-6 d-flex flex-column justify-content-center" style="font-family: Inter, sans-serif;">
                     <div class="text-center mb-4">
-                        <a href="new-request.html" class="btn btn-primary btn-lg shadow" style="font-family: Inter, sans-serif; padding: 15px 30px; font-size: 18px;">New Request</a>
+                        <a href="contacts.html" class="btn btn-primary btn-lg shadow" style="font-family: Inter, sans-serif; padding: 15px 30px; font-size: 18px;">New Request</a>
                     </div>
                     <div class="d-flex flex-column">
                         <div class="d-flex align-items-center p-3">
