--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -72,7 +72,7 @@
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link" href="hottubs.html">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">Contact</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -83,7 +83,7 @@
         <div class="container overlay">
             <h1 class="display-4">Ensure Your Home's Electrical Safety</h1>
             <p class="lead">Professional Electrical Inspection & Panel Labelling – only $499</p>
-            <a href="new-request.html" class="btn btn-primary btn-lg">Schedule Your Electrical Inspection</a>
+            <a href="contacts.html" class="btn btn-primary btn-lg">Schedule Your Electrical Inspection</a>
         </div>
     </header>
 
@@ -115,7 +115,7 @@
         <div class="container overlay">
             <h3 class="fw-bold">Ready to Protect Your Home?</h3>
             <p>Limited slots available. Don’t wait to secure your home.</p>
-                            <a href="new-request.html" class="btn btn-light btn-lg">Book Now for $499 </a>
+                            <a href="contacts.html" class="btn btn-light btn-lg">Book Now for $499 </a>
         </div>
     </section>
 
