--- a/surgeprotector.html
+++ b/surgeprotector.html
@@ -66,7 +66,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
                     <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
                     <li class="nav-item"><a class="nav-link" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="new-request.html">&nbsp;Contact&nbsp;</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
                 </ul>
             </div>
         </div>
@@ -99,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Protects ALL Devices Connected to the Home's Electrical System. </span></li>                                <ul>
                             </div>
                                         
-                                        <a style="padding: 20px;" href="new-request.html">
+                                        <a style="padding: 20px;" href="contacts.html">
                 <button class="btn btn-primary d-block w-100" type="button">
                     Get started today.
                 </button>
