Fixed header bar.

--- a/contacts.html
+++ b/contacts.html
@@ -53,8 +53,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD7TFGW6"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) --></div>
-    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" id="mainNav" style="font-family: Inter, sans-serif;">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/" style="margin-right: 0px;"><img src="assets/img/3.png" style="width: 140px;height: 122PX;" width="175" height="115"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-expand-md sticky-top py-1 navbar-dark" id="mainNav" style="font-family: Inter, sans-serif;">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/" style="margin-right: 0px;"><img src="assets/img/3.png" style="width: 90px;height: 80px;" width="175" height="115"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="width: 50%;">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html" style="text-align: center;padding: 8px 8px;">Home</a></li>
