--- a/homeautomation.html
+++ b/homeautomation.html
@@ -15,9 +15,10 @@
     <meta name="description" content="Home Automation System. Upgrade your home to a smart home, including light, appliance &amp; whole home automation systems.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Inter.css">
+    <link rel="stylesheet" href="assets/css/site-refresh.css">
 </head>
 
-<body>
+<body class="leonard-site">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD7TFGW6" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
