--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="stylesheet" href="assets/css/Pricing-Duo-icons.css">
     <link rel="stylesheet" href="assets/css/Video-Parallax-Background-v3.css">
     <link rel="stylesheet" href="assets/css/Video-Responsive.css">
+    <link rel="stylesheet" href="assets/css/site-refresh.css">
 </head>
 
-<body style="font-family: Aclonica, sans-serif;"><div><!-- Google Tag Manager (noscript) -->
+<body class="leonard-site" style="font-family: Aclonica, sans-serif;"><div><!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD7TFGW6"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) --></div>
