--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -44,9 +44,10 @@
             border-radius: 5px;
         }
     </style>
+    <link rel="stylesheet" href="assets/css/site-refresh.css">
 </head>
 
-<body>
+<body class="leonard-site">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD7TFGW6" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
