--- a/contacts.html
+++ b/contacts.html
@@ -38,35 +38,36 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="stylesheet" href="assets/css/Montserrat%20Alternates.css">
     <link rel="stylesheet" href="assets/css/Montserrat%20Subrayada.css">
     <link rel="stylesheet" href="assets/css/Roboto%20Condensed.css">
-    <link rel="stylesheet" href="assets/css/Animated-Pretty-Product-List-v12-Animated-Pretty-Product-List.css">
-    <link rel="stylesheet" href="assets/css/dh-card-image-left-dark.css">
-    <link rel="stylesheet" href="assets/css/Hero-Clean-images.css">
-    <link rel="stylesheet" href="assets/css/Hero-Photography-.css">
-    <link rel="stylesheet" href="assets/css/Hero-Technology-.css">
-    <link rel="stylesheet" href="assets/css/Pricing-Duo-badges.css">
-    <link rel="stylesheet" href="assets/css/Pricing-Duo-icons.css">
-    <link rel="stylesheet" href="assets/css/Video-Parallax-Background-v3.css">
-    <link rel="stylesheet" href="assets/css/Video-Responsive.css">
+    <link rel="stylesheet" href="assets/css/modern-home.css">
+    <link rel="stylesheet" href="assets/css/unified-modern.css">
+    <link rel="stylesheet" href="assets/css/electric-magic.css">
+    <link rel="stylesheet" href="assets/css/extra-sparkle.css">
 </head>
 
-<body style="font-family: Aclonica, sans-serif;"><div><!-- Google Tag Manager (noscript) -->
+<body class="site-body"><div><!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD7TFGW6"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) --></div>
-    <nav class="navbar navbar-expand-md sticky-top py-1 navbar-dark" id="mainNav" style="font-family: Inter, sans-serif;">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/" style="margin-right: 0px;"><img src="assets/img/3.png" style="width: 90px;height: 80px;" width="175" height="115"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1" style="width: 50%;">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html" style="text-align: center;padding: 8px 8px;">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html" style="text-align: center;padding: 8px 8px;">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="gallery.html" style="text-align: center;padding: 8px 8px;">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html" style="text-align: center;padding: 8px 8px;">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="panelupgrade.html" style="text-align: center;padding: 8px 8px;">Panel Upgrades</a></li>
-                    <li class="nav-item"><a class="nav-link" href="electricalrepairs.html" style="text-align: center;padding: 8px 8px;">Electrical Repair</a></li>
-                    <li class="nav-item"><a class="nav-link" href="homeautomation.html" style="text-align: center;padding: 8px 8px;">Home Automation</a></li>
-                    <li class="nav-item"><a class="nav-link" href="ev.html" style="text-align: center;padding: 8px 8px;">EV Charging System</a></li>
-                    <li class="nav-item"><a class="nav-link" href="hottubs.html" style="text-align: center;padding: 8px 8px;">Hot Tubs &amp; Pools</a></li>
-                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">&nbsp;Contact&nbsp;</a></li>
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top nav-glass">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+                <img src="assets/img/3.png" alt="Leonard Electric logo" width="70" height="62">
+                <span>Leonard Electric</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navcol-1"
+                aria-controls="navcol-1" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-2">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="panelupgrade.html">Panel Upgrades</a></li>
+                    <li class="nav-item"><a class="nav-link" href="ev.html">EV Charging</a></li>
+                    <li class="nav-item"><a class="nav-link" href="homeautomation.html">Smart Home</a></li>
+                    <li class="nav-item"><a class="btn btn-cta active" href="contacts.html">Request Service</a></li>
                 </ul>
             </div>
         </div>
