--- a/contacts.html
+++ b/contacts.html
@@ -297,6 +297,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/Animated-Pretty-Product-List-v12-Animated-Pretty-Product-List.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
@@ -322,6 +323,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         submitBtn.disabled = true;
 
         const formData = new FormData(form);
+        const attachmentsInput = document.getElementById('attachments');
+        if (attachmentsInput && attachmentsInput.files && attachmentsInput.files.length === 0) {
+          formData.delete('attachments');
+        }
 
         try {
           const response = await fetch('https://forms.kisstech.ca/contact/submit', {
