Fix service links to dedicated pages across site

--- a/electricalrepairs.html
+++ b/electricalrepairs.html
@@ -135,7 +135,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li></li>
                         <li></li>
                         <li><a href="hottubs.html">Hot Tubs, Sauna &amp;</a><a href="hottubs.html" style="padding-left: 0px;margin-left: 5px;">Pool Installation</a></li>
-                        <li><a href="services.html">Electrical Inspection</a><a href="inspection_panellabel.html" style="margin-left: 14px;">Panel Labelling</a></li>
+                        <li><a href="inspection_panellabel.html">Electrical Inspection</a><a href="inspection_panellabel.html" style="margin-left: 14px;">Panel Labelling</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
