--- a/homeautomation.html
+++ b/homeautomation.html
@@ -240,14 +240,14 @@
             <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column" style="margin-top: 13px;">
                 <h3 class="fs-6 fw-bold">Services</h3>
                 <ul class="list-unstyled">
-                    <li><a href="panelupgrade.html">Panel Upgrades</a><a href="services.html" style="margin-left: 13px;">&nbsp;Surge Protection</a></li>
+                    <li><a href="panelupgrade.html">Panel Upgrades</a><a href="surgeprotector.html" style="margin-left: 13px;">&nbsp;Surge Protection</a></li>
                     <li><a href="electricalrepairs.html">Electrical Installation &amp; Repair</a></li>
                     <li><a href="homeautomation.html">Home Automation Systems</a></li>
                     <li><a href="ev.html">Car Charger</a><a href="ev.html" style="padding-left: 0px;margin-left: 15px;">EV's</a></li>
                     <li></li>
                     <li></li>
                     <li><a href="hottubs.html">Hot Tubs, Sauna &amp;</a><a href="hottubs.html" style="padding-left: 0px;margin-left: 5px;">Pool Installation</a></li>
-                    <li><a href="services.html">Home Inspection</a><a href="services.html" style="margin-left: 14px;">Panel Labelling</a></li>
+                    <li><a href="inspection_panellabel.html">Home Inspection</a><a href="inspection_panellabel.html" style="margin-left: 14px;">Panel Labelling</a></li>
                 </ul>
             </div>
             <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column" style="margin-top: 14px;">
