--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -126,14 +126,14 @@
             <h3 class="fs-6 fw-bold">Services</h3>
             <ul class="list-unstyled">
                 <li><a href="panelupgrade.html" class="text-white">Panel Upgrades</a></li>
-                <li><a href="services.html" class="text-white">Surge Protection</a></li>
+                <li><a href="surgeprotector.html" class="text-white">Surge Protection</a></li>
                 <li><a href="electricalrepairs.html" class="text-white">Electrical Repair</a></li>
                 <li><a href="homeautomation.html" class="text-white">Home Automation</a></li>
                 <li><a href="ev.html" class="text-white">Car Charger</a></li>
                 <li><a href="hottubs.html" class="text-white">Hot Tubs</a></li>
                 <li><a href="hottubs.html" class="text-white">Pool Installation</a></li>
-                <li><a href="services.html" class="text-white">Electrical Inspection</a></li>
-                <li><a href="services.html" class="text-white">Panel Labelling</a></li>
+                <li><a href="inspection_panellabel.html" class="text-white">Electrical Inspection</a></li>
+                <li><a href="inspection_panellabel.html" class="text-white">Panel Labelling</a></li>
             </ul>
         </div>
 
