--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="col mb-4">
                         <div class="card shadow-sm">
                             <div class="card-body px-4 py-5 px-md-5">
-                                <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="services.html">
+                                <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="Lighting.html">
                                     <h5 class="fw-bold" style="text-align: left;">Interior &amp; Exterior Lighting</h5>
                                 </a>
                             </div>
@@ -531,14 +531,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Services</h3>
                     <ul class="list-unstyled">
-                        <li><a href="panelupgrade.html">Panel Upgrades</a><a href="services.html" style="margin-left: 13px;">&nbsp;Surge Protection</a></li>
+                        <li><a href="panelupgrade.html">Panel Upgrades</a><a href="surgeprotector.html" style="margin-left: 13px;">&nbsp;Surge Protection</a></li>
                         <li><a href="electricalrepairs.html">Electrical Repair &amp; Installation</a></li>
                         <li><a href="homeautomation.html">Home Automation Systems</a></li>
                         <li><a href="ev.html">Car Charger</a><a href="ev.html" style="padding-left: 0px;margin-left: 15px;">EV's</a></li>
                         <li></li>
                         <li></li>
                         <li><a href="hottubs.html">Hot Tubs, Sauna &amp;</a><a href="hottubs.html" style="padding-left: 0px;margin-left: 5px;">Pool Installation</a></li>
-                        <li><a href="services.html" style="margin-right: 14px;padding-left: 0px;margin-left: 1px;">Panel Labelling</a><a href="services.html">Home Inspection</a></li>
+                        <li><a href="inspection_panellabel.html" style="margin-right: 14px;padding-left: 0px;margin-left: 1px;">Panel Labelling</a><a href="inspection_panellabel.html">Home Inspection</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
