chore(html): clean head metadata and normalize page titles

--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -22,7 +22,7 @@
     </script>
     <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title> Electrical Inspection & Panel Labelling</title>
+    <title>Electrical Inspection &amp; Panel Labelling - Leonard Electric</title>
     <meta name="description" content="Professional Electrical Inspection & Panel Labelling services for only $499. Secure your home today!">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <style>
