--- a/panelupgrade.html
+++ b/panelupgrade.html
@@ -11,8 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WD7TFGW6');</script>
 <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Pricing - Leonard Electric</title>
-    <meta name="" content="">
+    <title>Panel Upgrade Pricing - Leonard Electric</title>
     <meta name="description" content="Upgrade outdated electrical panels to ensure the utmost safety for your home or business. Our panel upgrade service not only replaces old components but it will increase the capacity to handle modern electrical demands.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/ABeeZee.css">
